[package]
name = "bcrypt"
description = "bcrypt hashing wasm module for deno"
repository = "https://github.com/Blckbrry-Pi/deno-bcrypt"
license = "MIT"
version = "0.15.2"
authors = ["Skyler Calaman"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
path = "wasm/lib.rs"

[dependencies]
bcrypt-no-getrandom = { version = "0.15.1", features = ["alloc"], default-features = false }
talc = "4.4.1"
spin = "0.9.8"

[profile.release]
opt-level = "s"
lto = true
